--- a/01_login_form/index.html
+++ b/01_login_form/index.html
@@ -23,14 +23,17 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>1. Login Form.</h1>
           <pre>
-            Create an html `form` with two inputs:
-              * one for a username (named "username")
-              * the other for password (named "password")
-
-            Normally you don't see your password when you type it,
-            so make sure it's blocked out!.
-
+            <form>
+                <label>Enter Username
+                    <input type="text" id="user" name="name"/>
+                </label>
+                <label>Enter Password
+                    <input type="password" name="password"/>
+                </label>
+                <input type="submit">
             Question: What happens in the URL when you click submit?
+            When you click submit "name=Tess+Craig&password=Sawbone1" is added to the end of the current URL.
+          </form>
           </pre>
         </div>
         <div class="row">
