creates html form that on submit send the user to website and sets submit button value

--- a/01_login_form/index.html
+++ b/01_login_form/index.html
@@ -23,14 +23,14 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>1. Login Form.</h1>
           <pre>
-            <form>
+            <form method="POST" action="/users">
                 <label>Enter Username
                     <input type="text" id="user" name="name"/>
                 </label>
                 <label>Enter Password
                     <input type="password" name="password"/>
                 </label>
-                <input type="submit">
+                <input type="submit"/>
             Question: What happens in the URL when you click submit?
             When you click submit "name=Tess+Craig&password=Sawbone1" is added to the end of the current URL.
           </form>
