--- a/02_doomed_yet/index.html
+++ b/02_doomed_yet/index.html
@@ -23,6 +23,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>2. Doomed Yet?</h1>
           <pre>
+            <form method="GET" action="http://hasthelargehadroncolliderdestroyedtheworldyet.com">
             Create an html `form` that, on submit,
             sends the user to:
 
@@ -33,6 +34,8 @@
             Can you change the submit button to say:
 
             "Are we doomed?"
+            <input type="submit" value="Are we doomed?">
+          </form>
           </pre>
         </div>
         <div class="row">
