creates html form that contains color picker input and redirects on submit

--- a/02_doomed_yet/index.html
+++ b/02_doomed_yet/index.html
@@ -23,7 +23,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>2. Doomed Yet?</h1>
           <pre>
-            <form method="GET" action="http://hasthelargehadroncolliderdestroyedtheworldyet.com">
+            <form method="POST" action="http://hasthelargehadroncolliderdestroyedtheworldyet.com">
             Create an html `form` that, on submit,
             sends the user to:
 
