--- a/03_color_search/index.html
+++ b/03_color_search/index.html
@@ -23,6 +23,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>3. Color Search</h1>
           <pre>
+            <form method="POST" action="https://duckduckgo.com/?q=%2300fa91">
             Create an html `form` that contains
             the html5 color-picker input (named "q").
 
@@ -31,6 +32,9 @@
             redirect them to:
 
             e.g. "https://duckduckgo.com/?q=%2300fa91".
+            <input type="color" name="q">
+            <input type="submit"/>
+          </form>
           </pre>
         </div>
       </div>
