--- a/04_image_search/index.html
+++ b/04_image_search/index.html
@@ -23,6 +23,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>4. Image Search</h1>
           <pre>
+            <form method="POST" action="https://www.google.com/search">
             Create an html `form` that has an action
 
             of "https://www.google.com/search"
@@ -37,6 +38,7 @@
             You should end up here:
 
             "https://www.google.com/search?tbm=isch&q=http+status+cats"
+          </form>
           </pre>
         </div>
       </div>
