--- a/04_image_search/index.html
+++ b/04_image_search/index.html
@@ -23,7 +23,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>4. Image Search</h1>
           <pre>
-            <form method="POST" action="https://www.google.com/search">
+            <form method="GET" action="https://www.google.com/search">
             Create an html `form` that has an action
 
             of "https://www.google.com/search"
@@ -38,6 +38,9 @@
             You should end up here:
 
             "https://www.google.com/search?tbm=isch&q=http+status+cats"
+            <input type="hidden" name="tbm" value="isch"/>
+            <input type="required" name="q" value="http status cats"/>
+            <input type="submit"/>
           </form>
           </pre>
         </div>
