WIP JSON endpoint form

--- a/06_music_search/index.html
+++ b/06_music_search/index.html
@@ -23,6 +23,7 @@
         <div class="col-md-8 col-md-offset-2">
           <h1>6. Music Search</h1>
           <pre>
+            <form method="GET" action="">
             This challenge is different from the last 5.
             Instead of going to an HTML endpoint,
             we're going to a JSON endpoint.
@@ -40,6 +41,7 @@
             https://affiliate.itunes.apple.com/resources/documentation/itunes-store-web-service-search-api/
 
             To start, it's fine if your search is always in the US. As a bonus, add in the option to select which country to search in.
+          </form>
           </pre>
         </div>
       </div>
